Fixes Issue 1122
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/jain-slee@9067 bf0df8d0-2c1f-0410-b170-bd30377b63dc